--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: landing
 							<h2>{{ site.title }}</h2>
 							<p>{{ site.description | markdownify }}</p>
 							<ul class="actions">
-								<li><a href="/about" class="button special">About Me</a></li>
+								<li><a href="{{ site.github.url }}/about" class="button special">About Me</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -31,31 +31,31 @@ layout: landing
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/uxdesign.png" alt="" /></div><div class="content">
+							<div class="image"><img src="{{ site.github.url }}images/uxdesign.png" alt="" /></div><div class="content">
 								<h2>User Experience and <br />User Interface Design</h2>
 								<p>AI can take your project from Creative Brief through sitemapping, wireframing, prototyping, user testing, to production.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/webdev.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="{{ site.github.url }}images/webdev.jpg" alt="" /></div><div class="content">
 								<h2>Web Development</h2>
 								<p>Polymer, Jekyll, Drupal, Google Cloud, HTML5, CSS3</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/animation.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="{{ site.github.url }}images/animation.jpg" alt="" /></div><div class="content">
 								<h2>Multimedia and Video Production</h2>
 								<p>Animations to bring user interfaces to life </p>
 							</div>
 						</section>
 									<section class="spotlight">
-							<div class="image"><img src="images/webdev.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="{{ site.github.url }}images/webdev.jpg" alt="" /></div><div class="content">
 								<h2>Computer Illustration & Graphic Design </h2>
 								<p>I am an expert in Adobe Creative Suite and can make vector illustrations to add an artistic and modern touch to your project.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/uxdesign.png" alt="" /></div><div class="content">
+							<div class="image"><img src="{{ site.github.url }}images/uxdesign.png" alt="" /></div><div class="content">
 								<h2>DJ mixes and <br />electronic music promotion</h2>
 								<p>I have extensive experience design various materials to promote music and musicians. I specialize in design production for vinyl records, CDs, posters, digital advertisements, websites, and social media.</p>
 							</div>
