--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ layout: landing
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="{{ site.github.url }}images/uxdesign.png" alt="" /></div><div class="content">
+							<div class="image"><img src="{{ site.github.url }}images/music.png" alt="" /></div><div class="content">
 								<h2>DJ mixes and <br />electronic music promotion</h2>
 								<p>I have extensive experience design various materials to promote music and musicians. I specialize in design production for vinyl records, CDs, posters, digital advertisements, websites, and social media.</p>
 							</div>
