Fix text and take out some content.

--- a/index.html
+++ b/index.html
@@ -49,17 +49,12 @@ layout: landing
 							</div>
 						</section>
 									<section class="spotlight">
-							<div class="image"><img src="{{ site.github.url }}images/webdev.jpg" alt="" /></div><div class="content">
-								<h2>Computer Illustration & Graphic Design </h2>
-								<p>I am an expert in Adobe Creative Suite and can make vector illustrations to add an artistic and modern touch to your project.</p>
-							</div>
-						</section>
-						<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}images/music.png" alt="" /></div><div class="content">
 								<h2>DJ mixes and <br />electronic music promotion</h2>
 								<p>I have extensive experience design various materials to promote music and musicians. I specialize in design production for vinyl records, CDs, posters, digital advertisements, websites, and social media.</p>
 							</div>
 						</section>
+
 					</section>
 
 
@@ -68,24 +63,15 @@ layout: landing
 						<div class="inner">
 							<header class="major">
 								<h2>A broad yet deep array of skills which make for a well rounded and valuable asset to your team.</h2>
-								<p>One of the benefits of stayin on a particular career track for 15 years has been exploring </p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
-									<h3>User Experience Design</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>User Experience Design/User Interface Design</h3>
+									<p>Paper prototyping, user flows, wireframes, high fidelity user interfaces, interactive prototypes, user testing.</p>
 								</li>
-								<li class="icon fa-universal-access">
+								<li class="icon icon fa-code">
 									<h3>Web Development &amp; Accessibility</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-code">
-									<h3>User Interface Design</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-headphones">
-									<h3>Branding</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<p>HTML, CSS, JavaScript, JQuery, GIT, SASS, Jekyll, Wordpress, Jekyll, Drupal, Progressive Web Apps</p>
 								</li>
 								<li class="icon fa-heart-o">
 									<h3>Illustration and Graphic Design</h3>
