Update portfolio links

--- a/index.html
+++ b/index.html
@@ -68,18 +68,22 @@ layout: landing
 								<li class="icon fa-paper-plane-o">
 									<h3>User Experience Design/User Interface Design</h3>
 									<p>Paper prototyping, user flows, wireframes, high fidelity user interfaces, interactive prototypes, user testing.</p>
+									<p><a href="{{ site.github.url }}/ux/" class="button special">View Examples</a></p>
 								</li>
 								<li class="icon icon fa-code">
 									<h3>Web Development &amp; Accessibility</h3>
 									<p>HTML, CSS, JavaScript, JQuery, GIT, SASS, Jekyll, Wordpress, Jekyll, Drupal, Progressive Web Apps</p>
+									<p><a href="{{ site.github.url }}/ux" class="button special">View Examples</a></p>
 								</li>
 								<li class="icon fa-heart-o">
 									<h3>Illustration and Graphic Design</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<p>I love vector artwork and flat design. Adobe Illustrator is my favorite design tool and I am pretty mean with the gradient tool. :)</p>
+									<p><a href="{{ site.github.url }}/ux" class="button special">View Examples</a></p>
 								</li>
 								<li class="icon fa-file-video-o">
 									<h3>Video editing and animation</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<p>Video for the web enriches content, and animation can enhance UX.</p>
+									<p><a href="{{ site.github.url }}/ux" class="button special">View Examples</a></p>
 								</li>
 							</ul>
 						</div>
