fix file paths of sass files

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@ layout: landing
 						<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}/images/animation.jpg" alt="" /></div><div class="content">
 								<h2>Multimedia and Video Production</h2>
-								<p>Animations to bring user interfaces to life </p>
+								<p>I make animations that allow user interfaces to use moment to communicate in meaningul and graceful ways</p>
 							</div>
 						</section>
 									<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}/images/music.png" alt="" /></div><div class="content">
 								<h2>DJ mixes and <br />electronic music promotion</h2>
-								<p>I have extensive experience design various materials to promote music and musicians. I specialize in design production for vinyl records, CDs, posters, digital advertisements, websites, and social media.</p>
+								<p>I have extensive experience designing various materials to promote music and musicians. I specialize in design production for vinyl records, CDs, posters, digital advertisements, websites, and social media.</p>
 							</div>
 						</section>
 
@@ -72,7 +72,7 @@ layout: landing
 								</li>
 								<li class="icon icon fa-code">
 									<h3>Web Development &amp; Accessibility</h3>
-									<p>HTML, CSS, JavaScript, JQuery, GIT, SASS, Jekyll, Wordpress, Jekyll, Drupal, Progressive Web Apps</p>
+									<p>HTML, CSS, JavaScript, JQuery, GIT, SASS, Jekyll, Wordpress, Jekyll, Wordpress, Drupal, Progressive Web Apps.</p>
 									<p><a href="{{ site.github.url }}ux" class="button special">View Examples</a></p>
 								</li>
 								<li class="icon fa-heart-o">
@@ -82,7 +82,7 @@ layout: landing
 								</li>
 								<li class="icon fa-file-video-o">
 									<h3>Video editing and animation</h3>
-									<p>Video for the web enriches content, and animation can enhance UX.</p>
+									<p>Video for the web enriches content, and strategic animation can enhance UX.</p>
 									<p><a href="{{ site.github.url }}ux" class="button special">View Examples</a></p>
 								</li>
 							</ul>
