--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: landing
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="{{ site.github.url }}/images/uxdesign.png" alt="" /></div><div class="content">
+							<div class="image"><img src="{{ site.github.url }}images/uxdesign.png" alt="" /></div><div class="content">
 								<h2>User Experience and <br />User Interface Design</h2>
 								<p>AI can take your project from Creative Brief through sitemapping, wireframing, prototyping, user testing, to production.</p>
 							</div>
