fix image file paths

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@ layout: landing
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="{{ site.github.url }}/images/webdev.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="{{ site.github.url }}images/webdev.jpg" alt="" /></div><div class="content">
 								<h2>Web Development</h2>
 								<p>Polymer, Jekyll, Drupal, Google Cloud, HTML5, CSS3</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="{{ site.github.url }}/images/animation.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="{{ site.github.url }}images/animation.jpg" alt="" /></div><div class="content">
 								<h2>Multimedia and Video Production</h2>
 								<p>I make animations that allow user interfaces to use moment to communicate in meaningul and graceful ways</p>
 							</div>
 						</section>
 									<section class="spotlight">
-							<div class="image"><img src="{{ site.github.url }}/images/music.png" alt="" /></div><div class="content">
+							<div class="image"><img src="{{ site.github.url }}images/music.png" alt="" /></div><div class="content">
 								<h2>DJ mixes and <br />electronic music promotion</h2>
 								<p>I have extensive experience designing various materials to promote music and musicians. I specialize in design production for vinyl records, CDs, posters, digital advertisements, websites, and social media.</p>
 							</div>
