--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@ layout: landing
 						<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}images/uxdesign.png" alt="" /></div><div class="content">
 								<h2>User Experience and <br />User Interface Design</h2>
-								<p>AI can take your project from Creative Brief through sitemapping, wireframing, prototyping, user testing, to production.</p>
+								<p>AI can take your project from Creative Brief through sitemapping, wireframing, prototyping, user testing, to production. I can use Adobe Creative Suite in my sleep. :)</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}images/webdev.jpg" alt="" /></div><div class="content">
 								<h2>Web Development</h2>
-								<p>Polymer, Jekyll, Drupal, Google Cloud, HTML5, CSS3</p>
+								<p>Polymer, Jekyll, Drupal, Google Cloud, HTML5, CSS3.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}images/animation.jpg" alt="" /></div><div class="content">
 								<h2>Multimedia and Video Production</h2>
-								<p>I make animations that allow user interfaces to use moment to communicate in meaningul and graceful ways</p>
+								<p>I make animations that allow user interfaces to use moment to communicate in meaningul and graceful ways.</p>
 							</div>
 						</section>
 									<section class="spotlight">
