--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@ layout: landing
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="{{ site.github.url }}/images/uxdesign.png" alt="" /></div><div class="content">
+							<div class="image"><img src="{{ site.github.url }}images/uxdesign.png" alt="" /></div><div class="content">
 								<h2>User Experience and <br />User Interface Design</h2>
 								<p>AI can take your project from Creative Brief through sitemapping, wireframing, prototyping, user testing, to production. I can use Adobe Creative Suite in my sleep. :)</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="{{ site.github.url }}/images/webdev.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="{{ site.github.url }}images/webdev.jpg" alt="" /></div><div class="content">
 								<h2>Web Development</h2>
 								<p>Polymer, Jekyll, Drupal, Google Cloud, HTML5, CSS3.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="{{ site.github.url }}/images/animation.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="{{ site.github.url }}images/animation.jpg" alt="" /></div><div class="content">
 								<h2>Multimedia and Video Production</h2>
 								<p>I make animations that allow user interfaces to use moment to communicate in meaningul and graceful ways.</p>
 							</div>
 						</section>
 									<section class="spotlight">
-							<div class="image"><img src="{{ site.github.url }}/images/music.png" alt="" /></div><div class="content">
+							<div class="image"><img src="{{ site.github.url }}images/music.png" alt="" /></div><div class="content">
 								<h2>DJ mixes and <br />electronic music promotion</h2>
 								<p>I have extensive experience designing various materials to promote music and musicians. I specialize in design production for vinyl records, CDs, posters, digital advertisements, websites, and social media.</p>
 							</div>
