--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: landing
 							<h2>{{ site.title }}</h2>
 							<p>{{ site.description | markdownify }}</p>
 							<ul class="actions">
-								<li><a href="{{ site.github.url }}about" class="button special">About Me</a></li>
+								<li><a href="{{ site.github.url }}/about" class="button special">About Me</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
