--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: landing
 						<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}/images/webdev.jpg" alt="" /></div><div class="content">
 								<h2>Web Development</h2>
-								<p>Polymer, Jekyll, Drupal, Google Cloud, HTML5, CSS3.</p>
+								<p>Polymer, Jekyll, Drupal, Wordpress, Google Cloud, HTML5, CSS3, JavaScript, GIT</p>
 							</div>
 						</section>
 						<section class="spotlight">
