--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ layout: landing
 							<header class="major">
 								<h2>Since I started my career, I have endeavored to strike <br />a balance between creativity and technology.</h2>
 								<p>I specialize in two complementary areas which is unusual in this field: Design and coding. I design things and I build them. I always keep users in mind, and I get excited about new developments in technology and how they can be applied to advance the human condition.</p>
+
+								<i class="fa fa-github" aria-hidden="true"></i>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
