--- a/index.html
+++ b/index.html
@@ -34,24 +34,31 @@ layout: landing
 							<div class="image"><img src="{{ site.github.url }}/images/uxdesign.png" alt="" /></div><div class="content">
 								<h2>User Experience and <br />User Interface Design</h2>
 								<p>AI can take your project from Creative Brief through sitemapping, wireframing, prototyping, user testing, to production. I can use Adobe Creative Suite in my sleep. :)</p>
+																	<p><a href="{{ site.github.url }}/work/ux/" class="button special">View Examples</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}/images/webdev.jpg" alt="" /></div><div class="content">
 								<h2>Web Development</h2>
 								<p>Polymer, Jekyll, Drupal, Wordpress, Google Cloud, HTML5, CSS3, JavaScript, GIT</p>
+
+																	<p><a href="{{ site.github.url }}/work/web/" class="button special">View Examples</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}/images/animation.jpg" alt="" /></div><div class="content">
 								<h2>Multimedia and Video Production</h2>
 								<p>I make animations that allow user interfaces to use moment to communicate in meaningul and graceful ways.</p>
+
+																	<p><a href="{{ site.github.url }}/work/video/" class="button special">View Examples</a></p>
 							</div>
 						</section>
 									<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}/images/music.png" alt="" /></div><div class="content">
 								<h2>DJ mixes and <br />electronic music promotion</h2>
 								<p>I have extensive experience designing various materials to promote music and musicians. I specialize in design production for vinyl records, CDs, posters, digital advertisements, websites, and social media.</p>
+
+								<p><a href="{{ site.github.url }}/work/music/" class="button special">View Examples</a></p>
 							</div>
 						</section>
 
@@ -68,22 +75,21 @@ layout: landing
 								<li class="icon fa-paper-plane-o">
 									<h3>User Experience Design/User Interface Design</h3>
 									<p>Paper prototyping, user flows, wireframes, high fidelity user interfaces, interactive prototypes, user testing.</p>
-									<p><a href="{{ site.github.url }}/ux/" class="button special">View Examples</a></p>
+
 								</li>
 								<li class="icon icon fa-code">
 									<h3>Web Development &amp; Accessibility</h3>
 									<p>HTML, CSS, JavaScript, JQuery, GIT, SASS, Jekyll, Wordpress, Jekyll, Wordpress, Drupal, Progressive Web Apps.</p>
-									<p><a href="{{ site.github.url }}/ux" class="button special">View Examples</a></p>
+
 								</li>
 								<li class="icon fa-heart-o">
 									<h3>Illustration and Graphic Design</h3>
 									<p>I love vector artwork and flat design. Adobe Illustrator is my favorite design tool and I am pretty mean with the gradient tool. :)</p>
-									<p><a href="{{ site.github.url }}/ux" class="button special">View Examples</a></p>
+
 								</li>
 								<li class="icon fa-file-video-o">
 									<h3>Video editing and animation</h3>
 									<p>Video for the web enriches content, and strategic animation can enhance UX.</p>
-									<p><a href="{{ site.github.url }}/ux" class="button special">View Examples</a></p>
 								</li>
 							</ul>
 						</div>
