--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: landing
 						<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}/images/webdev.jpg" alt="" /></div><div class="content">
 								<h2>Web Development</h2>
-								<p>Polymer, Jekyll, Drupal, Wordpress, Google Cloud, HTML5, CSS3, JavaScript, GIT</p>
+								<p>Polymer, Jekyll, Drupal, Wordpress, Google Cloud, HTML5, CSS3, JavaScript, GIT, Ruby On Rails.</p>
 
 																	<p><a href="{{ site.github.url }}/work/web/" class="button special">View Examples</a></p>
 							</div>
