Change the link to GDG

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ layout: landing
 								<p>Since 2014 I have been the Lead Organizer for Google Developer Group - Central Virginia. We aim to provide technical training on the latest technologies in the Central Virginia region.</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="https://www.meetup.com/Google-Developer-Group-Central-Virginia/" class="button fit special">Find a Meetup</a></li>
-								<li><a href="https://www.meetup.com/Google-Developer-Group-Central-Virginia/" class="button fit">Visit the Website</a></li>
+								<li><a href="https://gdg.community.dev/gdg-central-virginia/" class="button fit special">Find a Meetup</a></li>
+								<li><a href="https://gdg.community.dev/gdg-central-virginia/" class="button fit">Visit the Website</a></li>
 							</ul>
 						</div>
 					</section>
