--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ layout: landing
 																	<p><a href="{{ site.github.url }}/work/web/" class="button special">View Examples</a></p>
 							</div>
 						</section>
-						<section class="spotlight">
+						<!--<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}/images/animation.jpg" alt="" /></div><div class="content">
 								<h2>Multimedia and Video Production</h2>
 								<p>I make animations that allow user interfaces to use moment to communicate in meaningul and graceful ways.</p>
@@ -53,14 +53,14 @@ layout: landing
 																	<p><a href="{{ site.github.url }}/work/video/" class="button special">View Examples</a></p>
 							</div>
 						</section>
-									<section class="spotlight">
+						<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}/images/music.png" alt="" /></div><div class="content">
 								<h2>DJ mixes and <br />electronic music promotion</h2>
 								<p>I have extensive experience designing various materials to promote music and musicians. I specialize in design production for vinyl records, CDs, posters, digital advertisements, websites, and social media.</p>
 
 								<p><a href="{{ site.github.url }}/work/music/" class="button special">View Examples</a></p>
 							</div>
-						</section>
+						</section>-->
 
 					</section>
 
