Update the home page web dev section

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@ layout: landing
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
 									<h3>User Experience Design/User Interface Design</h3>
-									<p>Paper prototyping, user flows, wireframes, high fidelity user interfaces, interactive prototypes, user testing.</p>
+									<p>Adobe XD, Paper prototyping, user flows, wireframes, high fidelity user interfaces, interactive prototypes, user testing.</p>
 
 								</li>
 								<li class="icon icon fa-code">
 									<h3>Web Development &amp; Accessibility</h3>
-									<p>HTML, CSS, JavaScript, JQuery, GIT, SASS, Jekyll, Wordpress, Jekyll, Wordpress, Drupal, Progressive Web Apps.</p>
+									<p>Drupal 8 Front End and Back End Development, Acquia Cloud, Pantheon, HTML, CSS, JavaScript, JQuery, GIT, SASS, Jekyll, Wordpress, Amazon Web Services, CERTBot Security Certificates, Unix, NPM, RubyGems</p>
 
 								</li>
 								<li class="icon fa-heart-o">
