fix text home page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: landing
 						<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}/images/uxdesign.png" alt="" /></div><div class="content">
 								<h2>User Experience and <br />User Interface Design</h2>
-								<p>AI can take your project from Creative Brief through sitemapping, wireframing, prototyping, user testing, to production. I can use Adobe Creative Suite in my sleep. :)</p>
+								<p>AI can take your project from Creative Brief through sitemapping, wireframing, prototyping, user testing, to production.</p>
 																	<p><a href="{{ site.github.url }}/work/ux/" class="button special">View Examples</a></p>
 							</div>
 						</section>
@@ -74,7 +74,7 @@ layout: landing
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
 									<h3>User Experience Design/User Interface Design</h3>
-									<p>Adobe XD, Paper prototyping, user flows, wireframes, high fidelity user interfaces, interactive prototypes, user testing.</p>
+									<p>Paper prototyping, user flows, wireframes, high fidelity user interfaces, interactive prototypes using Adobe XD, &amp; user testing.</p>
 
 								</li>
 								<li class="icon icon fa-code">
@@ -84,7 +84,7 @@ layout: landing
 								</li>
 								<li class="icon fa-heart-o">
 									<h3>Illustration and Graphic Design</h3>
-									<p>I love vector artwork and flat design. Adobe Illustrator is my favorite design tool and I am pretty mean with the gradient tool. :)</p>
+									<p>I love vector artwork and flat design. Adobe Illustrator is my favorite design tool.</p>
 
 								</li>
 								<li class="icon fa-file-video-o">
