Fix text on home page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: landing
 						<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}/images/uxdesign.png" alt="" /></div><div class="content">
 								<h2>User Experience and <br />User Interface Design</h2>
-								<p>AI can take your project from Creative Brief through sitemapping, wireframing, prototyping, user testing, to production.</p>
+								<p>I take your project from Creative Brief through sitemapping, wireframing, prototyping, user testing, to development &amp; production.</p>
 																	<p><a href="{{ site.github.url }}/work/ux/" class="button special">View Examples</a></p>
 							</div>
 						</section>
@@ -75,12 +75,12 @@ layout: landing
 								<li class="icon fa-paper-plane-o">
 									<h3>User Experience Design/User Interface Design</h3>
 									<p>Paper prototyping, user flows, wireframes, high fidelity user interfaces, interactive prototypes using Adobe XD, &amp; user testing.</p>
-
+									<p><a href="{{ site.github.url }}/work/ux/" class="button special">Read More</a></p>
 								</li>
 								<li class="icon icon fa-code">
 									<h3>Web Development &amp; Accessibility</h3>
 									<p>Drupal 8 Front End and Back End Development, Acquia Cloud, Pantheon, HTML, CSS, JavaScript, JQuery, GIT, SASS, Jekyll, Wordpress, Amazon Web Services, CERTBot Security Certificates, Unix, NPM, RubyGems</p>
-
+									<p><a href="{{ site.github.url }}/work/web/" class="button special">Read More</a></p>
 								</li>
 								<li class="icon fa-heart-o">
 									<h3>Illustration and Graphic Design</h3>
