Update some colors and text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: landing
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
+					<section id="two" class="wrapper alt style1">
 						<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}/images/uxdesign.png" alt="" /></div><div class="content">
 								<h2>User Experience and <br />User Interface Design</h2>
@@ -40,7 +40,7 @@ layout: landing
 						<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}/images/webdev.jpg" alt="" /></div><div class="content">
 								<h2>Web Development</h2>
-								<p>Polymer, Jekyll, Drupal, Wordpress, Google Cloud, HTML5, CSS3, JavaScript, GIT, Ruby On Rails.</p>
+								<p>I have a long track record of success in web development. My tools of the trade are Drupal 8, Acquia Cloud, Pantheon, HTML, CSS, JavaScript, JQuery, GIT, SASS, Jekyll, Wordpress, Amazon Web Services, CERTBot Security Certificates, Unix, NPM, RubyGems.</p>
 
 																	<p><a href="{{ site.github.url }}/work/web/" class="button special">View Examples</a></p>
 							</div>
@@ -85,11 +85,12 @@ layout: landing
 								<li class="icon fa-heart-o">
 									<h3>Illustration and Graphic Design</h3>
 									<p>I love vector artwork and flat design. Adobe Illustrator is my favorite design tool.</p>
-
+									<p><a href="{{ site.github.url }}/work/web/" class="button special">Read More</a></p>
 								</li>
 								<li class="icon fa-file-video-o">
 									<h3>Video editing and animation</h3>
 									<p>Video for the web enriches content, and strategic animation can enhance UX.</p>
+									<p><a href="{{ site.github.url }}/work/web/" class="button special">Read More</a></p>
 								</li>
 							</ul>
 						</div>
