Update image and create Web Project Management

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@ layout: landing
 								<li class="icon fa-heart-o">
 									<h3>Illustration and Graphic Design</h3>
 									<p>I love vector artwork and flat design. Adobe Illustrator is my favorite design tool.</p>
-									<p><a href="{{ site.github.url }}/work/web/" class="button special">Read More</a></p>
+									<p><a href="{{ site.github.url }}/work/art/" class="button special">Read More</a></p>
 								</li>
 								<li class="icon fa-file-video-o">
-									<h3>Video editing and animation</h3>
+									<h3>Web Project Management</h3>
 									<p>Video for the web enriches content, and strategic animation can enhance UX.</p>
 									<p><a href="{{ site.github.url }}/work/web/" class="button special">Read More</a></p>
 								</li>
