--- a/index.html
+++ b/index.html
@@ -50,15 +50,7 @@ layout: landing
 								<h2>Women Techmakers Ambassador</h2>
 								<p>I make animations that allow user interfaces to use moment to communicate in meaningul and graceful ways.</p>
 
-																	<p><a href="{{ site.github.url }}/work/video/" class="button special">View Examples</a></p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="{{ site.github.url }}/images/music.png" alt="" /></div><div class="content">
-								<h2>DJ mixes and <br />electronic music promotion</h2>
-								<p>I have extensive experience designing various materials to promote music and musicians. I specialize in design production for vinyl records, CDs, posters, digital advertisements, websites, and social media.</p>
-
-								<p><a href="{{ site.github.url }}/work/music/" class="button special">View Examples</a></p>
+																	<p><a href="https://www.womentechmakers.com/ambassadors/profiles/605c6b0737b30f65d9a8514a/starrie_williamson" class="button special">View Examples</a></p>
 							</div>
 						</section>
 						<!--<section class="spotlight">
@@ -106,7 +98,7 @@ layout: landing
 								<li class="icon fa-file-video-o">
 									<h3>Web Project Management</h3>
 									<p>Video for the web enriches content, and strategic animation can enhance UX.</p>
-									<p><a href="{{ site.github.url }}/work/web/" class="button special">Read More</a></p>
+									<p><a href="{{ site.github.url }}/work/projectmanagement/" class="button special">Read More</a></p>
 								</li>
 							</ul>
 						</div>
