fix links and text

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ layout: landing
 						<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}/images/womentechmakers.jpg" alt="" /></div><div class="content">
 								<h2>Women Techmakers Ambassador</h2>
-								<p>I make animations that allow user interfaces to use moment to communicate in meaningul and graceful ways.</p>
+								<p>Since 2014 I have served as a WomenTechmaker Ambassador for Google Developer Groups.</p>
 
-																	<p><a href="https://www.womentechmakers.com/ambassadors/profiles/605c6b0737b30f65d9a8514a/starrie_williamson" class="button special">View Examples</a></p>
+																	<p><a href="https://www.womentechmakers.com/ambassadors/profiles/605c6b0737b30f65d9a8514a/starrie_williamson" class="button special">Learn More</a></p>
 							</div>
 						</section>
 						<!--<section class="spotlight">
