--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ layout: landing
 						<section class="spotlight">
 							<div class="image"><img src="{{ site.github.url }}/images/womentechmakers.jpg" alt="" /></div><div class="content">
 								<h2>Women Techmakers Ambassador</h2>
-								<p>Since 2014 I have served as a WomenTechmaker Ambassador for Google Developer Groups.</p>
+								<p>Women Techmakers Ambassadors are community leaders around the world passionate about achieving gender parity in technology. We believe change starts at the grassroots level, and by building a gender equitable community ecosystem we can begin to shift the industry as a whole.</p>
 
 																	<p><a href="https://www.womentechmakers.com/ambassadors/profiles/605c6b0737b30f65d9a8514a/starrie_williamson" class="button special">Learn More</a></p>
 							</div>
