--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: landing
 ---
 				<!-- Banner -->
 					<section id="banner">
-						<video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
+					<!--<video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
 							<source src="{{ site.github.url }}/images/1061354344-preview.mp4" type="video/mp4">
-							</video>
+							</video> -->
 						<div class="inner">
 							<h2>{{ site.title }}</h2>
 							<p>{{ site.description | markdownify }}</p>
