--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ layout: landing
 								<p>I specialize in two complementary areas which is unusual in this field: Design and coding. I design things and I build them. I always keep users in mind, and I get excited about new developments in technology and how they can be applied to advance the human condition.</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-balance-scale major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><span class="icon fa-heart-o major style2"><span class="label">Love</span></span></li>
+								<li><span class="icon fa-balance-scale major style1"><span class="label">Balance</span></span></li>
+								<li><span class="icon fa-code major style3"><span class="label">Technology</span></span></li>
 							</ul>
 						</div>
 					</section>
@@ -53,7 +53,7 @@ layout: landing
 								<h2>Women Techmakers Ambassador</h2>
 								<p>Women Techmakers Ambassadors are community leaders around the world passionate about achieving gender parity in technology. We believe change starts at the grassroots level, and by building a gender equitable community ecosystem we can begin to shift the industry as a whole.</p>
 
-																	<p><a href="https://www.womentechmakers.com/ambassadors/profiles/605c6b0737b30f65d9a8514a/starrie_williamson" class="button special">Learn More</a></p>
+																	<p><a href="https://g.dev/starriewilliamson" class="button special">View My Profile</a></p>
 							</div>
 						</section>
 						<!--<section class="spotlight">
