Update the website with new design and background image

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: landing
 ---
 				<!-- Banner -->
 					<section id="banner">
-					<!--<video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
-							<source src="{{ site.github.url }}/images/1061354344-preview.mp4" type="video/mp4">
-							</video> -->
+					<video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
+							<source src="{{ site.github.url }}/images/AdobeStock_595247018.mov" type="video/mp4">
+					</video>
 						<div class="inner">
 							<h2>{{ site.title }}</h2>
 							<p>{{ site.description | markdownify }}</p>
@@ -100,7 +100,7 @@ layout: landing
 								</li>
 								<li class="icon fa-file-video-o">
 									<h3>Web Project Management</h3>
-									<p>Video for the web enriches content, and strategic animation can enhance UX.</p>
+									<p>I have years of experience of web project management for different schools at the University of Virginia.</p>
 									<p><a href="{{ site.github.url }}/work/projectmanagement/" class="button special">Read More</a></p>
 								</li>
 							</ul>
