--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: landing
 ---
 				<!-- Banner -->
 					<section id="banner">
-					<video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
+					<video id="background-video" autoplay loop muted poster="{{ site.github.url }}/images/static_background.png">
 							<source src="{{ site.github.url }}/images/AdobeStock_595247018.mov" type="video/mp4">
 					</video>
 						<div class="inner">
